--- a/webTruong.html
+++ b/webTruong.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="loading">
+        <p>Loading...</p>
+    </div>
     <div class="container">
         <div>
             <label for="username">Tên đăng nhập</label>
