[Add] Select year

--- a/webTruong.html
+++ b/webTruong.html
@@ -27,6 +27,8 @@
         <button type="button" id="login">Đăng nhập</button>
     </div>
     <div class="select-course" id="select-course">
+        <select name="course-year" id="course-year">
+        </select>
         <select name="course" id="course">
         </select>
     </div>
